sample-test/sample-pod-1.yaml
apiVersion: v1
kind: Pod
metadata:
 name: sample-pod-1
spec:
 #hostNetwork: true
 containers:
 - name: sample-pod-1
   #image: call518/oaas-init-container
   image: call518/oaas-neutron-server
   securityContext:
     privileged: true
#   ports:
#   - containerPort: 3306
   command:
     - "bash"
     - "-c"
     - |
       [...]
