sample-test/sample-pod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: sample-pod
spec:
 #hostNetwork: true
 containers:
 - name: sample-pod
   #image: call518/oaas-init-container
   image: call518/oaas-cinder
   securityContext:
     privileged: true
#   ports:
#   - containerPort: 3306
   command:
     - "bash"
     - "-c"
     - |
       service rsyslog restart;
       tail -F /var/log/syslog;
